--- a/src/ui/pages/layouts/MainLayout.css
+++ b/src/ui/pages/layouts/MainLayout.css
@@ -12,6 +12,7 @@ div[class$='-SkeletonTheme'] {
 
 .layout > .ui {
   display: grid;
+  overflow-x: hidden;
 }
 
 .layout > .tabs {
